--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,8 @@
     "name": "audrey/slim0319",
     "type": "project",
     "require": {
-        "slim/slim": "^3.12"
+        "slim/slim": "^3.12",
+        "fig-r/psr2r-sniffer": "^0.5.0",
+        "squizlabs/php_codesniffer": "^3.4"
     }
 }
