--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,10 @@
         "slim/slim": "^3.12",
         "fig-r/psr2r-sniffer": "^0.5.0",
         "squizlabs/php_codesniffer": "^3.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
