--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "slim/slim": "^3.12",
         "fig-r/psr2r-sniffer": "^0.5.0",
-        "squizlabs/php_codesniffer": "^3.4"
+        "squizlabs/php_codesniffer": "^3.4",
+        "slim/twig-view": "^2.4"
     },
     "autoload": {
         "psr-4": {
